Have completed 4 tutorial steps now. It has a second activity which shoes text from the first one. It also has a back button.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".DisplayMessageActivity"
+                  android:parentActivityName=".GitExampleActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".GitExampleActivity" />
+        </activity>
     </application>
 
 </manifest>
